fix user service for excel