@@ -1,11 +1,16 @@
 package org.example.daiam.service.impl;
 
+import jakarta.ws.rs.BadRequestException;
+import jakarta.ws.rs.InternalServerErrorException;
+import jakarta.ws.rs.NotFoundException;
+import org.example.daiam.dto.request.ChangePasswordRequest;
 import org.example.daiam.dto.request.LoginRequest;
 import org.example.daiam.dto.request.LogoutRequest;
 import org.example.daiam.dto.request.RegisterRequest;
 import org.example.daiam.dto.response.BaseTokenResponse;
 
 import org.example.daiam.dto.response.DefaultClientTokenResponse;
+import org.example.daiam.dto.response.KeycloakClientTokenResponse;
 import org.example.daiam.dto.response.KeycloakTokenResponse;
 
 
@@ -16,25 +21,18 @@ import lombok.extern.slf4j.Slf4j;
 import org.example.daiam.repo.BlackListTokenRepo;
 import org.example.daiam.repo.RoleRepo;
 import org.example.daiam.repo.UserRepo;
-import org.example.daiam.service.BaseAuthenticationService;
-import org.example.daiam.service.BaseKeycloakService;
-import org.example.daiam.service.JWTService;
-import org.example.daiam.service.PasswordService;
-import org.example.model.dto.response.BasedResponse;
+import org.example.daiam.service.*;
+import org.keycloak.adapters.springsecurity.KeycloakAuthenticationException;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.admin.client.resource.UsersResource;
 import org.keycloak.representations.idm.CredentialRepresentation;
 import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
-import org.springframework.web.client.RestTemplate;
 
 import java.util.*;
 
@@ -43,185 +41,119 @@ import java.util.*;
 @Slf4j
 public class KeycloakAuthenticationService extends BaseKeycloakService implements BaseAuthenticationService {
     private final PasswordService passwordService;
-
     private final AuthenticationService authenticationService;
-
+    private final KeycloakClient keycloakClient;
     @Value("${application.security.keycloak.realm}")
     private String realm;
     @Value("${application.security.keycloak.clientId}")
     private String clientId;
+    @Value("${application.security.keycloak.clientSecret}")
+    private String clientSecret;
     @Value("${application.security.keycloak.serverUrl}")
     private String serverUrl;
     @Value("${application.security.keycloak.logoutUrl}")
-    private String LOGOUT_URL;
+    private String logoutUrl;
     @Value("${application.security.keycloak.newAccessTokenUrl}")
-    private String NEW_ACCESS_TOKEN_URL;
+    private String newAccessTokenUrl;
+
     public KeycloakAuthenticationService(UserRepo userRepo,
                                          RoleRepo roleRepo,
                                          Keycloak keycloak,
                                          PasswordService passwordService,
                                          AuthenticationService authenticationService,
                                          BlackListTokenRepo blackListTokenRepo,
-                                         JWTService jwtService
-                                         ) {
-        super(keycloak,userRepo, roleRepo,blackListTokenRepo,jwtService);
+                                         JWTService jwtService,
+                                         KeycloakClient keycloakClient
+    ) {
+        super(keycloak, userRepo, roleRepo, blackListTokenRepo, jwtService);
         this.passwordService = passwordService;
         this.authenticationService = authenticationService;
+        this.keycloakClient = keycloakClient;
     }
 
     @Override
     public User register(RegisterRequest request) {
-        try {
-            User user = authenticationService.register(request);
-            createKeycloakUser(request.email(), request.password());
-            return user;
-        } catch (Exception e) {
-            throw new IllegalArgumentException("Register with keycloak failed");
-        }
+        User user = authenticationService.register(request);
+        createKeycloakUser(request.email(), request.password());
+        return user;
     }
-
 
     @Override
     public BaseTokenResponse login(LoginRequest request) {
-        try {
-            authenticationService.login(request);
-            return getKeycloakUserToken(request.email(), request.password());
-        } catch (Exception e) {
-            throw new IllegalArgumentException("Login with keycloak failed");
-        }
-    }
-@Override
-    public void changePassword(String currentPassword, String newPassword, String confirmPassword, String email) {
-        passwordService.changePassword(currentPassword, newPassword, confirmPassword, email);
-        try {
-            UsersResource usersResource = keycloak().realm(realm).users();
-            // Use searchByEmail to find the user
-            List<UserRepresentation> users = usersResource.searchByEmail(email, true);
-            if (users.isEmpty()) {
-                throw new IllegalArgumentException("User with email " + email + " not found.");
-            }
-            UserRepresentation userRepresentation = users.get(0);
-            String userId = userRepresentation.getId();
-            CredentialRepresentation credential = new CredentialRepresentation();
-            credential.setType(CredentialRepresentation.PASSWORD);
-            credential.setValue(newPassword);
-            credential.setTemporary(false);
-            UserResource userResource = usersResource.get(userId);
-            userResource.resetPassword(credential);
-        } catch (Exception ex) {
-            throw new ErrorResponseException("Failed change keycloak password: " + ex.getMessage());
-        }
+        authenticationService.login(request);
+        return getKeycloakUserToken(request.email(), request.password());
     }
 
     @Override
-    public String getClientToken(DefaultClientTokenResponse request) {
-        return null;
-    }
-
-
-    @Override
-    public void logout(LogoutRequest request) {
-        String refreshToken = request.refreshToken();
-        RestTemplate restTemplate = new RestTemplate();
-
-        // Set headers
-        HttpHeaders headers = new HttpHeaders();
-        headers.add(HttpHeaders.CONTENT_TYPE, "application/x-www-form-urlencoded");
-
-        // Set body
+    public BaseTokenResponse getClientToken(String clientId, String clientSecret) {
         MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
         body.add("client_id", clientId);
-        //body.add("client_secret", clientSecret);
-        body.add("refresh_token", refreshToken);
-        // Create the request
-        HttpEntity<MultiValueMap<String, String>> requestKeycloak = new HttpEntity<>(body, headers);
-        // Send the request
-        ResponseEntity<String> response = restTemplate.exchange(
-                LOGOUT_URL,
-                HttpMethod.POST,
-                requestKeycloak,
-                String.class
-        );
-
-        // Check response status
-        if (response.getStatusCode().is2xxSuccessful()) {
-            System.out.println("Logout successful!");
-        } else {
-            System.out.println("Logout failed: " + response.getStatusCode());
-        }
-        BasedResponse.success("Logout successful", request.email());
+        body.add("client_secret", clientSecret);
+        body.add("grant_type", "client_credentials");
+        return keycloakClient.getKeycloakClientToken(body).getBody();
     }
 
 
     @Override
-    public BaseTokenResponse refreshToken(String  refreshToken) {
-        RestTemplate restTemplate = new RestTemplate();
-        // Set headers
-        HttpHeaders headers = new HttpHeaders();
-        headers.add(HttpHeaders.CONTENT_TYPE, "application/x-www-form-urlencoded");
-
-        // Set body with required parameters
+    public ResponseEntity<?> logout(LogoutRequest request) {
         MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
         body.add("client_id", clientId);
-        //body.add("client_secret", ""); // Replace with your Keycloak client secret
+        body.add("client_secret", clientSecret);
+        body.add("refresh_token", request.refreshToken());
+        return keycloakClient.logout(body);
+    }
+
+
+    @Override
+    public BaseTokenResponse refreshToken(String refreshToken) {
+        MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
+        body.add("client_id", clientId);
+        body.add("client_secret", clientSecret);
         body.add("refresh_token", refreshToken);
         body.add("grant_type", "refresh_token");
-        // Create the request
-        HttpEntity<MultiValueMap<String, String>> request = new HttpEntity<>(body, headers);
-
-        // Send the request
-        ResponseEntity<KeycloakTokenResponse> response = restTemplate.exchange(NEW_ACCESS_TOKEN_URL, HttpMethod.POST, request, KeycloakTokenResponse.class);
-        // Check response status
-        if (response.getStatusCode().is2xxSuccessful()) {
-            System.out.println("Logout successful!");
-        } else {
-            System.out.println("Logout failed: " + response.getStatusCode());
-        }
-        return response.getBody();
+        return keycloakClient.refreshToken(body).getBody();
     }
 
     public KeycloakTokenResponse getKeycloakUserToken(String username, String password) {
-        String tokenUrl = serverUrl + "/realms/" + realm + "/protocol/openid-connect/token";
-        RestTemplate restTemplate = new RestTemplate();
-        // Set headers
-        HttpHeaders headers = new HttpHeaders();
-        headers.add(HttpHeaders.CONTENT_TYPE, "application/x-www-form-urlencoded");
-
-        // Set body
         MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
         body.add("grant_type", "password");
         body.add("client_id", clientId);
-        //body.add("client_secret", clientSecret);
+        body.add("client_secret", clientSecret);
         body.add("username", username);
         body.add("password", password);
-
-        // Create the request
-        HttpEntity<MultiValueMap<String, String>> request = new HttpEntity<>(body, headers);
-        // Send the request
-        ResponseEntity<KeycloakTokenResponse> response = restTemplate.exchange(tokenUrl, HttpMethod.POST, request, KeycloakTokenResponse.class);
-        return response.getBody();
+        return keycloakClient.getKeycloakUserToken(body).getBody();
     }
 
     @Override
     public void resetPassword(String email, String newPassword, String token) {
         passwordService.resetPassword(email, newPassword, token);
+        UsersResource usersResource = getUsersResource();
+        List<UserRepresentation> users = usersResource.searchByEmail(email, true);// Use searchByEmail to find the user
+        resetKeycloakUserPassword(users, newPassword);
+    }
+
+    @Override
+    public void changePassword(ChangePasswordRequest request) {
+        passwordService.changePassword(request);
+        List<UserRepresentation> users = getUsersResource().searchByEmail(request.email(), true);
+        resetKeycloakUserPassword(users, request.newPassword());
+    }
+
+    private void resetKeycloakUserPassword(List<UserRepresentation> users, String newPassword) {
         try {
-            UsersResource usersResource = keycloak().realm(realm).users();
-            // Use searchByEmail to find the user
-            List<UserRepresentation> users = usersResource.searchByEmail(email, true);
             if (users.isEmpty()) {
-                throw new IllegalArgumentException("User with email " + email + " not found.");
+                throw new NotFoundException("User not found in keycloak");
             }
-            UserRepresentation userRepresentation = users.get(0);
+            UserRepresentation userRepresentation = users.getFirst();
             String userId = userRepresentation.getId();
             CredentialRepresentation credential = new CredentialRepresentation();
             credential.setType(CredentialRepresentation.PASSWORD);
             credential.setValue(newPassword);
             credential.setTemporary(false);
-            UserResource userResource = usersResource.get(userId);
+            UserResource userResource = getUsersResource().get(userId);
             userResource.resetPassword(credential);
-        } catch (Exception ex) {
-            throw new ErrorResponseException("Failed reset keycloak password: " + ex.getMessage());
+        }catch (Exception e){
+            throw new BadRequestException("Reset password failed", e);
         }
     }
 
